--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,12 +1,11 @@
 name: Snyk Security Scan
 
+on:
+  push:
+  pull_request:
+
 env:
   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
-on:
-  pull_request:
-  push:
-    branches: [master]
 
 jobs:
   security:
@@ -16,16 +15,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Node (or Python, Go, etc. depending on your stack)
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+    - name: Set up Snyk CLI
+      uses: snyk/actions/setup@master
 
-    - name: Install dependencies
-      run: npm install
+    - name: Run Snyk test (without dependency install)
+      run: snyk test --all-projects --detection-depth=2 --exclude=node_modules
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-    - name: Run Snyk test
-      uses: snyk/actions/node@master
+    - name: Output SARIF (optional)
+      run: snyk test --sarif-file-output=snyk.sarif --all-projects --detection-depth=2 --exclude=node_modules
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
