--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -19,7 +19,7 @@ jobs:
       uses: snyk/actions/setup@master
 
     - name: Run Snyk test (without dependency install)
-      run: snyk test --all-projects --detection-depth=2 --exclude=node_modules
+      run: snyk test
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
