--- a/.github/workflows/ScanOutputSARIF.yml
+++ b/.github/workflows/ScanOutputSARIF.yml
@@ -42,6 +42,7 @@ jobs:
       run: snyk test --sarif-file-output=snyk.sarif --all-projects --detection-depth=2 --exclude=node_modules
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        continue-on-error: true
 
     - name: Upload SARIF to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v2
