--- a/.github/workflows/ScanOutputSARIF.yml
+++ b/.github/workflows/ScanOutputSARIF.yml
@@ -21,8 +21,9 @@ jobs:
         node-version: 18
 
     - name: 📦 Install dependencies
-      run: npm install
-      run: npm install http-signature
+      run: |
+      npm install
+      npm install http-signature
 
     - name: 🔧 Install Snyk CLI
       uses: snyk/actions/setup@master
