--- a/.github/workflows/ScanOutputSARIF.yml
+++ b/.github/workflows/ScanOutputSARIF.yml
@@ -46,28 +46,39 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         continue-on-error: true
 
-      - name: Sanitize SARIF (fix invalid severity values)
+      - name: Sanitize SARIF (rules & results)
         run: |
           node -e "
           const fs = require('fs');
           const path = 'snyk.sarif';
           const sarif = JSON.parse(fs.readFileSync(path, 'utf8'));
           let fixed = false;
+
           for (const run of sarif.runs || []) {
-            for (const rule of run.tool?.driver?.rules || []) {
-              const sev = rule.properties?.securitySeverity;
-              if (typeof sev !== 'number') {
+            const rules = run.tool?.driver?.rules || [];
+            for (const rule of rules) {
+              if (typeof rule?.properties?.securitySeverity !== 'number') {
                 if (!rule.properties) rule.properties = {};
                 rule.properties.securitySeverity = 3.0;
                 fixed = true;
               }
             }
+
+            const results = run.results || [];
+            for (const result of results) {
+              if (typeof result?.properties?.securitySeverity !== 'number') {
+                if (!result.properties) result.properties = {};
+                result.properties.securitySeverity = 3.0;
+                fixed = true;
+              }
+            }
           }
+
           if (fixed) {
             fs.writeFileSync(path, JSON.stringify(sarif, null, 2));
-            console.log('SARIF sanitized: fixed undefined or null securitySeverity values.');
+            console.log('✅ SARIF sanitized and saved.');
           } else {
-            console.log('SARIF already clean.');
+            console.log('✅ SARIF already clean.');
           }
           "
 
