--- a/.github/workflows/ScanOutputSARIF.yml
+++ b/.github/workflows/ScanOutputSARIF.yml
@@ -33,56 +33,17 @@ jobs:
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-       
+
       - name: Snyk Code scan (static analysis)
         run: snyk code test --sarif > snyk-code.sarif
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        
 
-      - name: "Debug: List SARIF file presence and size"
-        run: |
-          ls -lh *.sarif || true
+      - name: Fix undefined severity in OSS SARIF
+        run: sed -i 's/"security-severity": "undefined"/"security-severity": 0/g' snyk-oss.sarif
 
-      - name: Sanitize SARIF files (OSS + Code)
-        run: |
-          cat <<'EOF' > sanitize.js
-          const fs = require('fs');
-          const files = ['snyk-oss.sarif', 'snyk-code.sarif'];
-
-          for (const file of files) {
-            if (!fs.existsSync(file)) {
-              console.warn(`⚠️ File not found: ${file}`);
-              continue;
-            }
-
-            console.log(`🧼 Sanitizing: ${file}`);
-            const sarif = JSON.parse(fs.readFileSync(file, 'utf8'));
-            let fixed = false;
-
-            for (const run of sarif.runs || []) {
-              const rules = run.tool?.driver?.rules || [];
-              for (const rule of rules) {
-                rule.properties = rule.properties || {};
-                if (typeof rule.properties.securitySeverity !== 'number') {
-                  rule.properties.securitySeverity = 3.0;
-                  fixed = true;
-                }
-              }
-            }
-
-            if (fixed) {
-              fs.writeFileSync(file, JSON.stringify(sarif, null, 2));
-              console.log(`✅ ${file} sanitized and saved.`);
-            } else {
-              console.log(`✅ ${file} already clean.`);
-            }
-          }
-          EOF
-          node sanitize.js
-
-      - name: "Debug: Validate sanitized SARIF contents"
+      - name: "Debug: List SARIF files"
         run: |
           echo "--- snyk-oss.sarif ---"
           grep -i securitySeverity snyk-oss.sarif || echo "None found"
