--- a/.github/workflows/ScanOutputSARIF.yml
+++ b/.github/workflows/ScanOutputSARIF.yml
@@ -1,8 +1,8 @@
 name: Snyk Full Security Scan
 
 on:
-  push:
-  pull_request:
+  push: {}
+  pull_request: {}
 
 env:
   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -41,7 +41,8 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - name: Fix undefined severity in OSS SARIF
-        run: sed -i 's/"security-severity": "undefined"/"security-severity": 0/g' snyk-oss.sarif
+        run: |
+          sed -i 's/"security-severity": "undefined"/"security-severity": 0/g' snyk-oss.sarif
 
       - name: "Debug: List SARIF files"
         run: |
