--- a/.github/workflows/PRCheckJSONOutput.yml
+++ b/.github/workflows/PRCheckJSONOutput.yml
@@ -22,15 +22,14 @@ jobs:
         uses: snyk/actions/setup@master
 
       - name: Run Snyk test and save JSON
-        run: snyk test --json > snyk-results.json
+        run: snyk test --json | tee snyk-results.json || true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        continue-on-error: true
 
       - name: Output summary to GitHub Actions UI
         run: |
           echo "## Snyk Vulnerabilities Found" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          cat snyk-results.json | jq -r '.vulnerabilities[] | "- \(.severity) severity in \(.packageName)@\(.version): \(.title)"' | head -n 10 >> $GITHUB_STEP_SUMMARY
+          jq -r '.vulnerabilities[] | "- \(.severity) severity in \(.packageName)@\(.version): \(.title)"' snyk-results.json | head -n 10 >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "_Only showing top 10. See logs for full results._" >> $GITHUB_STEP_SUMMARY
