--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "4.12.4",
     "express-fileupload": "0.0.5",
     "file-type": "^8.1.0",
+    "http-signature": "^1.4.0",
     "humanize-ms": "1.0.1",
     "jquery": "^2.2.4",
     "lodash": "4.17.4",
@@ -43,10 +44,10 @@
     "ms": "^0.7.1",
     "npmconf": "0.0.24",
     "optional": "^0.1.3",
+    "snyk": "^1.290.2",
     "st": "0.2.4",
     "stream-buffers": "^3.0.1",
-    "tap": "^5.7.0",
-    "snyk": "^1.290.2"
+    "tap": "^5.7.0"
   },
   "devDependencies": {
     "browserify": "^13.1.1"
